--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
+    "vite": "^5.2.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
